Update api.yaml
